@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

title US009 - As Product Owner, I want to create a user story and add it to the Product Backlog

class CreateUserStoryUI {

}

class CreateUserStoryController {
    +getProjectListByUserEmail(String email)
    +getProjectByCode(String code)
    +createUserStory(status, priority, description)
}

class Company {
    +getProjectStore()
}

class ProjectStore {
+getProjectListByUserEmail(String email)
+getProjectByCode(String code)
}

class Project {
-code : String
-productBacklog : ProductBacklog
+getUserStoryStore()
}

class ProductBacklog {
-userStoryList : List<UserStory>
+createUserStory(status, priority, description)
+isValideUserStory(status, priority, description)
+saveUserStory(us)
+validateUserStory(us)
}

class UserStory {
- userStoryStatus : UserStoryStatus
- priority : int
- description : String
- id_UserStory : int
- parentUserStory : UserStory
+UserStory(status, priority,description)
}

CreateUserStoryUI ..> CreateUserStoryController

CreateUserStoryController ..> Company
CreateUserStoryController ..> ProjectStore
CreateUserStoryController ..> Project
CreateUserStoryController ..> ProductBacklog

Company "1" o-- "1" ProjectStore: has
ProjectStore "1" *-- "0..*" Project: has
Project "1" -> "1" ProductBacklog
ProductBacklog "1" -> "0..*" UserStory

@enduml